--- a/face_recognition.ipynb
+++ b/face_recognition.ipynb
@@ -17,7 +17,7 @@
     "\n",
     "- **University:** National and Kapodistrian University of Athens\n",
     "- **Department:** Informatics and Telecommunications\n",
-    "- **Name:** Pavlos Tomazos\n",
+    "- **Name:** Pavlos Tomazos\n"
    ]
   },
   {
